--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,30 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JobAlign</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="./assets/Jobalign.png" alt="Logo"></a>
+            <a href="index.html"><img src="./assets/Jobalign.png" alt="Logo" id="logo"></a>
+            <div id="navLinks" class="nav-links">
             <ul>
-                <li>
-                    <a href="index.html">HOME</a>
-                    <a href="">BLANK</a>
-                    <a href="">ADVANTAGES</a>
-                </li>
+                <li>   <a href="index.html">HOME</a>   </li>
+                <li>   <a href="">BLANK</a>            </li> 
+                <li>   <a href="">ADVANTAGES</a>       </li> 
+                
             </ul>
+            </div>
         </nav>
-
+        <div id="homePage">
         <div id="home-page-description">
+            <h3>Description</h3>
             <p>JobAlign helps you bridge the gap between where you are and where you want to be. By understanding your dream company and target role, we break down the exact skills, tools, and experience required to get there. Instead of vague advice or generic preparation paths, JobAlign gives you clarity—showing what actually matters and what you should focus on next.
 
 Our goal is simple: eliminate confusion in career preparation. Whether you’re a student, fresher, or early professional, JobAlign provides a structured roadmap that aligns your learning and resume with real industry expectations.</p>
         </div>
         <div id="motivation"><img src="./assets/alignYourGoals.jpeg" alt="Motivation"></div>
-        
 
+        </div>
 
 
     </section>
