--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,44 +48,107 @@
       </div>
     </section>
     <div id="page2">
-    <section>
-      <div class="form-group" id="form-company">
-        <label for="company">Select Company:</label>
-        <select id="company">
-          <!-- Initial placeholder option -->
-          <option value="">Loading companies...</option>
-          <!-- JavaScript will populate more options here -->
-        </select>
-      </div>
+      <section>
+        <div class="form-group" id="form-company">
+          <label for="company">Select Company:</label>
+          <select id="company">
+            <!-- Initial placeholder option -->
+            <option value="">Loading companies...</option>
+            <!-- JavaScript will populate more options here -->
+          </select>
+        </div>
 
-      <div class="form-group">
-        <label for="designation">Select Designation:</label>
-        <select id="designation">
-          <!-- Initial placeholder option -->
-          <option value="">Loading designations...</option>
-          <!-- JavaScript will populate more options here -->
-        </select>
-      </div>
-    </section>
+        <div class="form-group">
+          <label for="designation">Select Designation:</label>
+          <select id="designation">
+            <!-- Initial placeholder option -->
+            <option value="">Loading designations...</option>
+            <!-- JavaScript will populate more options here -->
+          </select>
+        </div>
+      </section>
 
-    <section class="graph-section">
-      <h2>Skills Confidence Graph</h2>
-      <div class="chart-container">
-        <canvas id="SkillsChart"></canvas>
-      </div>
+      <section class="graph-section">
+        <h2>Skills Confidence Graph</h2>
+        <div class="chart-container">
+          <canvas id="SkillsChart"></canvas>
+        </div>
 
-      <div id="emptyState" class="empty-state">
-        <p>📊</p>
-        <p>Select Company and Designation to See Skill Reccomendations</p>
-      </div>
-      <div id="chartInfo" class="chart-info" style="display: none">
-        <p><strong>Company:</strong> <span id="displayCompany">-</span></p>
-        <p>
-          <strong>Designation:</strong> <span id="displayDesignation">-</span>
-        </p>
-        <p><strong>Skills Analyzed:</strong> <span id="skillCount">0</span></p>
-      </div>
-    </section>
+        <div id="emptyState" class="empty-state">
+          <p>📊</p>
+          <p>Select Company and Designation to See Skill Reccomendations</p>
+        </div>
+        <div id="chartInfo" class="chart-info" style="display: none">
+          <p><strong>Company:</strong> <span id="displayCompany">-</span></p>
+          <p>
+            <strong>Designation:</strong> <span id="displayDesignation">-</span>
+          </p>
+          <p>
+            <strong>Skills Analyzed:</strong> <span id="skillCount">0</span>
+          </p>
+        </div>
+      </section>
+
     </div>
+    
+      <div id="page3">
+        <section>
+          <h1>Why use JobAlign?</h1>
+          <p>
+            “Our platform helps you tailor your resume by analyzing your dream
+            company and desired role, giving you a clear roadmap of skills,
+            format, and highlights. With AI-driven insights, we ensure your
+            resume matches exactly what recruiters are looking for.”
+          </p>
+          <div class="cards">
+            <div class="card1">
+              <h2>Company & Designation Selection</h2>
+              <p>
+                Our platform allows users to choose their desired company and
+                target designation. This ensures that the career roadmap
+                generated is highly personalized and directly relevant to the
+                user’s career goals, rather than being generic.
+              </p>
+            </div>
+            <div class="card2">
+              <h2>Resume-Based Skill Extraction</h2>
+              <p>
+                Using machine learning and natural language processing, the
+                system analyzes resumes of professionals who have already
+                secured the desired role. It extracts critical skills, tools,
+                and achievements, ensuring insights are based on real-world
+                data.
+              </p>
+            </div>
+            <div class="card3">
+              <h2>Personalized Skill Roadmap</h2>
+              <p>
+                Once the relevant skills and achievements are extracted, the
+                platform generates a customized roadmap. This roadmap helps
+                users understand exactly what to learn, in what order, and why
+                it is important for achieving their target designation.
+              </p>
+            </div>
+            <div class="card4">
+              <h2>Company-Specific Insights</h2>
+              <p>
+                Unlike generic platforms, our system provides company-specific
+                analysis. The skills and technologies identified are tailored to
+                the practices of each company, ensuring that preparation aligns
+                with their expectations.
+              </p>
+            </div>
+            <div class="card5">
+              <h2>Designation-Specific Guidance</h2>
+              <p>
+                Every role demands a unique set of competencies. Our solution
+                focuses on designation-specific requirements, highlighting not
+                only technical skills but also relevant achievements and soft
+                skills necessary for success.
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
   </body>
 </html>
